<resources>
    <string name="app_name">HealthCoach</string>
    <string name="logout">Logout</string>

    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_password_info">Enter the mail address associated with your account.</string>
    <string name="remember_password">Remember the password? Log in.</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="already_have_account">Already have an account? Sign In!</string>
    <string name="not_have_account">Don\'t have an account? Sign Up!</string>
    <string name="steps">Steps</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="daily_kcal">Daily Kcal</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="click_to_edit">Click to Edit</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="weight">Weight</string>
    <string name="birth_date">Birth Date</string>
    <string name="registration_disclamer">Attention: You cannot edit your birth date, your gender or your full name once you submit!</string>
    <string name="setting">Settings</string>
    <string name="submit">Submit</string>
    <string name="height_cm">Height (cm)</string>
    <string name="height">Height</string>
    <string name="daily_water">Daily Water</string>
    <string name="update_password">Update Password</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="user_info">User Info</string>
    <string name="nickname_age">Nickname (Age)</string>
    <string name="caloriesValue">Calories</string>
    <string name="hydrationValue">Hydration</string>
    <string name="totalsteps">totalSteps</string>
    <string name="google_login">Google Login</string>
    <string name="daily_water_ml">Daily Water (ml)</string>
    <string name="submit2">Submit</string>
    <string name="height_cm2">Height (cm)</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="history_data_here">History Data Here</string>
    <string name="fetch_data2">Fetch Data</string>
    <string name="insert_data">Insert Data</string>
    <string name="enter_data">Enter Data</string>
    <string name="insert_data2">Insert Data</string>
    <string name="ml">ml</string>
    <string name="water_intake">Water Intake</string>
    <string name="register_activity">Register Activity</string>
    <string name="merge_google">Merge Google</string>

    <!-- Gender values -->
    <string-array name="gender_values">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="data_types">
        <item>Hydration</item>
        <item>Weight</item>
        <item>BodyFat</item>
        <item>Steps</item>
        <item>Kcal</item>
        <item>Distance</item>
    </string-array>

    <string-array name="workout">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Competitive</item>
    </string-array>

    <string-array name="data_types2">
        <item>Hydration</item>
        <item>Weight</item>
        <item>BodyFat</item>
    </string-array>


    <string-array name="times">
        <item>0 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>1 h</item>
        <item>1.25 h</item>
        <item>1.5 h</item>
        <item>1.75 h</item>
        <item>2 h</item>
        <item>2.5 h</item>
        <item>3 h</item>
        <item>3.5 h</item>
        <item>4 h</item>
    </string-array>
</resources>
