<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Calendar View -->
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <!-- Insert Data Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/green">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_data2" />

            <Spinner
                android:id="@+id/insertDataTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/data_types2" />

            <EditText
                android:id="@+id/dataInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_data"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/insertDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_data" />
        </LinearLayout>

        <!-- Fetch Data Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/green">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetch_data" />

            <Spinner
                android:id="@+id/fetchDataTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/data_types" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/historyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_data_here" />

            <Button
                android:id="@+id/fetchDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fetch_data2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
